# scientific-voyager

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-tests.yml
config/: .env.example  config.yaml
config/environments/: development.yaml  production.yaml  testing.yaml
data/statements/: 14bad7a9-f881-4986-b4c7-2d957689a317.json  3e5870f8-e276-40bc-a1ed-daef939f2741.json  a2739954-4597-4290-91cd-34388d4f074b.json
docs/: branch_protection.md  conf.py  configuration.md  git_workflow.md  index.rst
examples/: biological_scale_demo.py  classification_example.py  config_example.py  enhanced_pubmed_example.py  extraction_example.py  knowledge_graph_example.py  local_storage_example.py  pubmed_adapter_example.py  queue_example.py  relationship_extraction_example.py  storage_example.py
scientific_voyager/: __init__.py  main.py
scientific_voyager/classification/: prompt_classifier.py  prompt_templates.py  validation.py
scientific_voyager/config/: __init__.py  config_manager.py  config_validator.py
scientific_voyager/core/: emergent_insights.py  execution_engine.py  hierarchical_model.py  insights_generator.py  knowledge_graph.py  statement_extractor.py  task_generator.py  triangulation.py
scientific_voyager/data/: data_manager.py  database_manager.py  processing_pipeline.py  pubmed_source.py
scientific_voyager/extraction/: base_extractor.py  llm_extractor.py
scientific_voyager/graph/: knowledge_graph.py  relationship_extraction.py
scripts/: PRD.md  task-complexity-report.json
tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  task_011.txt  task_012.txt  task_013.txt  task_014.txt  tasks.json
tests/: __init__.py  test_local_store.py
(+42 files in other folders)
