[tool.poetry]
name = "scientific-voyager"
version = "0.1.0"
description = "AI-driven exploratory research platform for scientific literature"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "scientific_voyager"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = ">=2.2.4,<3.0.0"
pandas = ">=2.2.3,<3.0.0"
scikit-learn = ">=1.6.1,<2.0.0"
matplotlib = ">=3.10.1,<4.0.0"
networkx = ">=3.4.2,<4.0.0"
spacy = ">=3.8.5,<4.0.0"
transformers = ">=4.51.2,<5.0.0"
torch = ">=2.6.0,<3.0.0"
nltk = ">=3.9.1,<4.0.0"
requests = ">=2.32.3,<3.0.0"
beautifulsoup4 = ">=4.13.3,<5.0.0"
neo4j = ">=5.28.1,<6.0.0"
chromadb = ">=1.0.4,<2.0.0"
openai = ">=1.0.0,<2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
flake8 = "^7.2.0"
mypy = "^1.15.0"
isort = "^6.0.1"
pre-commit = "^4.2.0"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
